--- a/notebooks/launch-exploratory.ipynb
+++ b/notebooks/launch-exploratory.ipynb
@@ -3698,6 +3698,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets wrap it all in a function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
