Added pictures to readme

--- a/launch-exploratory.ipynb
+++ b/launch-exploratory.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\ghodg\\\\daimil9\\\\projects\\\\space-launch-exploratory'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +59,7 @@
        "(4324, 9)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +312,7 @@
        "[4324 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +515,7 @@
        "[4324 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +601,7 @@
        " 'i-Space']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +812,7 @@
        "[100 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1017,7 @@
        "[203 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1229,7 @@
        "[621 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1441,7 @@
        "[280 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1473,32 +1493,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>2009-05-11</td>\n",
-       "      <td>NASA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>2014-10-29</td>\n",
-       "      <td>ULA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>ULA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>2015-12-22</td>\n",
-       "      <td>SpaceX</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>2017-01-21</td>\n",
+       "      <th>31</th>\n",
+       "      <td>2007-09-18</td>\n",
        "      <td>ULA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1509,86 +1505,110 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>2009-06-27</td>\n",
-       "      <td>ULA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>2010-05-28</td>\n",
-       "      <td>ULA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>2014-02-21</td>\n",
-       "      <td>ULA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>2010-05-14</td>\n",
-       "      <td>NASA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>256</th>\n",
-       "      <td>2019-08-08</td>\n",
-       "      <td>ULA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>2006-03-24</td>\n",
        "      <td>SpaceX</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2001-02-07</td>\n",
-       "      <td>NASA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>2009-08-28</td>\n",
-       "      <td>NASA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>2017-03-30</td>\n",
+       "      <th>167</th>\n",
+       "      <td>2015-12-22</td>\n",
        "      <td>SpaceX</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>2016-09-01</td>\n",
-       "      <td>SpaceX</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>2007-10-11</td>\n",
+       "      <th>69</th>\n",
+       "      <td>2009-10-08</td>\n",
        "      <td>ULA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>2011-07-08</td>\n",
-       "      <td>NASA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>2017-06-25</td>\n",
+       "      <th>145</th>\n",
+       "      <td>2014-09-21</td>\n",
        "      <td>SpaceX</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>2007-11-11</td>\n",
+       "      <th>156</th>\n",
+       "      <td>2015-04-15</td>\n",
+       "      <td>SpaceX</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>2017-01-21</td>\n",
+       "      <td>ULA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>2019-01-11</td>\n",
+       "      <td>SpaceX</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>2013-02-11</td>\n",
+       "      <td>ULA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>2009-07-15</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>279</th>\n",
+       "      <td>2020-08-07</td>\n",
+       "      <td>SpaceX</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>2011-04-15</td>\n",
+       "      <td>ULA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>2013-09-29</td>\n",
+       "      <td>SpaceX</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>2015-07-15</td>\n",
+       "      <td>ULA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>2020-01-19</td>\n",
+       "      <td>SpaceX</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>2009-05-05</td>\n",
+       "      <td>ULA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2007-08-08</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>2010-02-08</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>2012-06-29</td>\n",
        "      <td>ULA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1598,29 +1618,29 @@
       ],
       "text/plain": [
        "          Date Company Name  Launch Count\n",
-       "60  2009-05-11         NASA             1\n",
-       "146 2014-10-29          ULA             1\n",
-       "192 2017-03-01          ULA             1\n",
-       "167 2015-12-22       SpaceX             1\n",
-       "190 2017-01-21          ULA             1\n",
+       "31  2007-09-18          ULA             1\n",
        "85  2010-09-21          ULA             1\n",
-       "62  2009-06-27          ULA             1\n",
-       "82  2010-05-28          ULA             1\n",
-       "131 2014-02-21          ULA             1\n",
-       "81  2010-05-14         NASA             1\n",
-       "256 2019-08-08          ULA             1\n",
        "18  2006-03-24       SpaceX             1\n",
-       "5   2001-02-07         NASA             1\n",
-       "66  2009-08-28         NASA             1\n",
-       "195 2017-03-30       SpaceX             1\n",
-       "183 2016-09-01       SpaceX             1\n",
-       "33  2007-10-11          ULA             1\n",
-       "97  2011-07-08         NASA             1\n",
-       "201 2017-06-25       SpaceX             1\n",
-       "36  2007-11-11          ULA             1"
+       "167 2015-12-22       SpaceX             1\n",
+       "69  2009-10-08          ULA             1\n",
+       "145 2014-09-21       SpaceX             1\n",
+       "156 2015-04-15       SpaceX             1\n",
+       "190 2017-01-21          ULA             1\n",
+       "244 2019-01-11       SpaceX             1\n",
+       "116 2013-02-11          ULA             1\n",
+       "64  2009-07-15         NASA             1\n",
+       "279 2020-08-07       SpaceX             1\n",
+       "93  2011-04-15          ULA             1\n",
+       "125 2013-09-29       SpaceX             1\n",
+       "160 2015-07-15          ULA             1\n",
+       "263 2020-01-19       SpaceX             1\n",
+       "59  2009-05-05          ULA             1\n",
+       "30  2007-08-08         NASA             1\n",
+       "76  2010-02-08         NASA             1\n",
+       "109 2012-06-29          ULA             1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2020,7 @@
        "39          ULA  2020             4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2061,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2320,7 @@
        "[2453 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2313,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2431,7 +2451,7 @@
        "[2326 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2443,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2561,7 +2581,7 @@
        "[334 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2947,7 +2967,7 @@
        "47          ULA  2020             4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2959,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2992,7 +3012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3001,7 +3021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3193,7 +3213,7 @@
        "[1980 rows x 7 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3207,7 +3227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3399,7 +3419,7 @@
        "[1940 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3411,7 +3431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3529,7 +3549,7 @@
        "[1818 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3541,7 +3561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3659,7 +3679,7 @@
        "[74 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3671,7 +3691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3706,7 +3726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
